fixed issue where transports measure indicator wouldn't fit on Safari

--- a/src/assets/css/transport.less
+++ b/src/assets/css/transport.less
@@ -50,7 +50,7 @@
     // measure indicator
     &#currentPattern {
       display: inline-block;
-      width: 45px;
+      width: 55px;
       text-align: center;
       color: #FFF;
     }
